--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       background-color: #138808;
       color: white;
       cursor: pointer;
+      margin: 5px;
     }
     button:hover {
       background-color: #0f6d06;
@@ -58,6 +59,13 @@
       margin-top: 20px;
       font-size: 24px;
       color: #000;
+    }
+    .share-buttons {
+      margin-top: 20px;
+    }
+    .share-buttons button {
+      background-color: #ff9933;
+      margin: 5px;
     }
     footer {
       margin-top: 20px;
@@ -79,6 +87,11 @@
       <button onclick="displayGreeting()">Submit</button>
     </div>
     <div class="message" id="greetingMessage"></div>
+    <div class="share-buttons" id="shareButtons" style="display: none;">
+      <button onclick="shareWhatsApp()">Share on WhatsApp</button>
+      <button onclick="shareFacebook()">Share on Facebook</button>
+      <button onclick="shareTwitter()">Share on Twitter</button>
+    </div>
   </div>
   <footer>
     <p>🇮🇳 Jai Hind! Proud to be Indian 🇮🇳</p>
@@ -87,11 +100,37 @@
     function displayGreeting() {
       const name = document.getElementById('nameInput').value;
       const message = document.getElementById('greetingMessage');
+      const shareButtons = document.getElementById('shareButtons');
+      
       if (name) {
-        message.innerHTML = `Dear <strong>${name}</strong>,<br> Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+        const greeting = `Dear ${name}, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+        message.innerHTML = greeting;
+        shareButtons.style.display = 'block';
       } else {
         message.innerHTML = "Please enter your name to get a personalized greeting!";
+        shareButtons.style.display = 'none';
       }
+    }
+
+    function shareWhatsApp() {
+      const name = document.getElementById('nameInput').value;
+      const message = `Dear ${name}, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+      const url = `https://api.whatsapp.com/send?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
+    }
+
+    function shareFacebook() {
+      const name = document.getElementById('nameInput').value;
+      const message = `Dear ${name}, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+      const url = `https://www.facebook.com/sharer/sharer.php?u=&quote=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
+    }
+
+    function shareTwitter() {
+      const name = document.getElementById('nameInput').value;
+      const message = `Dear ${name}, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+      const url = `https://twitter.com/intent/tweet?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
     }
   </script>
 </body>
