--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       margin: 0;
     }
     .content {
-      padding: 50px 20px;
+      padding: 20px;
     }
     h1 {
       font-size: 40px;
@@ -60,6 +60,17 @@
       font-size: 24px;
       color: #000;
     }
+    .quote {
+      font-size: 20px;
+      font-style: italic;
+      color: #FF9933;
+      margin-top: 10px;
+    }
+    .flag-image img {
+      max-width: 100%;
+      height: auto;
+      border: 2px solid #000;
+    }
     .share-buttons {
       margin-top: 20px;
     }
@@ -80,6 +91,9 @@
     <h1>Happy Republic Day 2025!</h1>
   </header>
   <div class="content">
+    <div class="flag-image">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Indian Flag">
+    </div>
     <h1>Vande Mataram!</h1>
     <h2>Enter your name to get a personalized greeting</h2>
     <div class="input-container">
@@ -87,6 +101,7 @@
       <button onclick="displayGreeting()">Submit</button>
     </div>
     <div class="message" id="greetingMessage"></div>
+    <div class="quote" id="patrioticQuote"></div>
     <div class="share-buttons" id="shareButtons" style="display: none;">
       <button onclick="shareWhatsApp()">Share on WhatsApp</button>
       <button onclick="shareFacebook()">Share on Facebook</button>
@@ -97,17 +112,40 @@
     <p>🇮🇳 Jai Hind! Proud to be Indian 🇮🇳</p>
   </footer>
   <script>
+    // Array of Patriotic Quotes in Hindi and English
+    const quotes = [
+      "शहीदों की चिताओं पर लगेंगे हर बरस मेले, वतन पर मरनेवालों का यही बाकी निशां होगा।",
+      "तिरंगे की शान को हमेशा बनाए रखेंगे, देशभक्तों की कुर्बानी बेकार नहीं जाने देंगे।",
+      "Freedom is not worth having if it does not include the freedom to make mistakes. – Mahatma Gandhi",
+      "Ask not what your country can do for you, ask what you can do for your country. – John F. Kennedy",
+      "देशभक्ति जहां खत्म होती है, वहां इंसानियत शुरू होती है।",
+      "This republic was not established by cowards, and cowards will not preserve it. – Elmer Davis",
+      "स्वतंत्रता की रक्षा करना हमारा कर्तव्य है।",
+      "The best way to find yourself is to lose yourself in the service of others. – Mahatma Gandhi",
+      "सारे जहाँ से अच्छा हिन्दोस्ताँ हमारा।",
+      "Let us together commence a journey of peace, harmony, and progress in South Asia. – Atal Bihari Vajpayee"
+    ];
+
     function displayGreeting() {
       const name = document.getElementById('nameInput').value;
       const message = document.getElementById('greetingMessage');
+      const quoteElement = document.getElementById('patrioticQuote');
       const shareButtons = document.getElementById('shareButtons');
       
       if (name) {
-        const greeting = `Dear ${name}, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
-        message.innerHTML = greeting;
+        // Get a random quote
+        const randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
+        const greeting = `<strong>${name}</strong>, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
+        message.innerHTML = `
+          <div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Flag" style="width: 100px; height: auto; border-radius: 50%;">
+            <p>${greeting}</p>
+          </div>`;
+        quoteElement.textContent = `"${randomQuote}"`;
         shareButtons.style.display = 'block';
       } else {
         message.innerHTML = "Please enter your name to get a personalized greeting!";
+        quoteElement.textContent = "";
         shareButtons.style.display = 'none';
       }
     }
