Gif added index.html

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       color: #FF9933;
       margin-top: 10px;
     }
-    .flag-image img {
-      max-width: 100%;
+    .gif-container img {
+      width: 300px;
       height: auto;
-      border: 2px solid #000;
+      margin-top: 20px;
     }
     .share-buttons {
       margin-top: 20px;
@@ -91,8 +91,9 @@
     <h1>Happy Republic Day 2025!</h1>
   </header>
   <div class="content">
-    <div class="flag-image">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Indian Flag">
+    <!-- Celebration GIF -->
+    <div class="gif-container">
+      <img src="https://media.giphy.com/media/26gR0bktpTZHfgHPi/giphy.gif" alt="Celebration GIF">
     </div>
     <h1>Vande Mataram!</h1>
     <h2>Enter your name to get a personalized greeting</h2>
