Animation 1 update index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      background: linear-gradient(to bottom, #FF9933, #FFFFFF, #138808);
+      background: #FFFFFF;
       color: #000;
+      overflow-x: hidden;
     }
     header {
       padding: 20px;
@@ -23,6 +24,7 @@
     }
     .content {
       padding: 20px;
+      position: relative;
     }
     h1 {
       font-size: 40px;
@@ -66,10 +68,11 @@
       color: #FF9933;
       margin-top: 10px;
     }
-    .gif-container img {
-      width: 300px;
+    .flag-container img {
+      width: 100px;
       height: auto;
-      margin-top: 20px;
+      margin-top: 10px;
+      border-radius: 10px;
     }
     .share-buttons {
       margin-top: 20px;
@@ -84,16 +87,31 @@
       background-color: #138808;
       color: white;
     }
+
+    /* Fireworks animation */
+    .fireworks {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      height: 100%;
+      background: url('https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif') no-repeat center center;
+      background-size: cover;
+      opacity: 0.5;
+      z-index: -1;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Happy Republic Day 2025!</h1>
   </header>
+  <div class="fireworks"></div>
   <div class="content">
-    <!-- Celebration GIF -->
-    <div class="gif-container">
-      <img src="https://media.giphy.com/media/26gR0bktpTZHfgHPi/giphy.gif" alt="Celebration GIF">
+    <!-- Flag always visible -->
+    <div class="flag-container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Indian Flag">
     </div>
     <h1>Vande Mataram!</h1>
     <h2>Enter your name to get a personalized greeting</h2>
@@ -113,18 +131,37 @@
     <p>🇮🇳 Jai Hind! Proud to be Indian 🇮🇳</p>
   </footer>
   <script>
-    // Array of Patriotic Quotes in Hindi and English
+    // Array of Patriotic Quotes from Indian Leaders
     const quotes = [
-      "शहीदों की चिताओं पर लगेंगे हर बरस मेले, वतन पर मरनेवालों का यही बाकी निशां होगा।",
-      "तिरंगे की शान को हमेशा बनाए रखेंगे, देशभक्तों की कुर्बानी बेकार नहीं जाने देंगे।",
-      "Freedom is not worth having if it does not include the freedom to make mistakes. – Mahatma Gandhi",
-      "Ask not what your country can do for you, ask what you can do for your country. – John F. Kennedy",
-      "देशभक्ति जहां खत्म होती है, वहां इंसानियत शुरू होती है।",
-      "This republic was not established by cowards, and cowards will not preserve it. – Elmer Davis",
-      "स्वतंत्रता की रक्षा करना हमारा कर्तव्य है।",
-      "The best way to find yourself is to lose yourself in the service of others. – Mahatma Gandhi",
-      "सारे जहाँ से अच्छा हिन्दोस्ताँ हमारा।",
-      "Let us together commence a journey of peace, harmony, and progress in South Asia. – Atal Bihari Vajpayee"
+      "स्वतंत्रता हमारा जन्मसिद्ध अधिकार है। – बाल गंगाधर तिलक",
+      "करो या मरो। – महात्मा गांधी",
+      "इंसान को कठिनाइयों की आवश्यकता होती है, क्योंकि सफलता का आनंद उठाने के लिए यह ज़रूरी है। – डॉ. एपीजे अब्दुल कलाम",
+      "तुम मुझे खून दो, मैं तुम्हें आज़ादी दूंगा। – सुभाष चंद्र बोस",
+      "सत्यमेव जयते। – चाणक्य",
+      "जहां प्रेम है वहां जीवन है। – महात्मा गांधी",
+      "सभी महान कार्य शक्ति और विश्वास से होते हैं। – सरदार वल्लभभाई पटेल",
+      "जब तक गलती करने की स्वतंत्रता ना हो, तब तक स्वतंत्रता का कोई अर्थ नहीं है। – महात्मा गांधी",
+      "सपने वो नहीं जो हम सोते वक्त देखते हैं, बल्कि सपने वो हैं जो हमें सोने नहीं देते। – डॉ. एपीजे अब्दुल कलाम",
+      "मेरे पास जीवन में केवल एक लक्ष्य है – भारत को महान बनाना। – नरेंद्र मोदी",
+      "शांति से देश की सेवा करें। – जवाहरलाल नेहरू",
+      "साहस के बिना आप कुछ नहीं कर सकते। – इंदिरा गांधी",
+      "देश को स्वच्छ बनाएं, यह हमारा कर्तव्य है। – नरेंद्र मोदी",
+      "हम एक हैं। – सरदार वल्लभभाई पटेल",
+      "हमारा कर्तव्य है कि भारत को बेहतर बनाए। – डॉ. राजेंद्र प्रसाद",
+      "कभी भी हार मत मानो। – रानी लक्ष्मीबाई",
+      "वंदे मातरम्। – बंकिम चंद्र चटर्जी",
+      "देशभक्ति सबसे बड़ा धर्म है। – भगत सिंह",
+      "अहिंसा परमो धर्मः। – महात्मा गांधी",
+      "देश की सेवा सबसे बड़ा धर्म है। – महात्मा गांधी",
+      "तिरंगे की शान हमेशा बनाए रखेंगे। – अज्ञात",
+      "भारत एक महान देश है। – जवाहरलाल नेहरू",
+      "देशभक्ति से बड़ा कुछ नहीं। – भगत सिंह",
+      "आजादी का स्वाद केवल वही जानते हैं जो इसके लिए लड़ते हैं। – सुभाष चंद्र बोस",
+      "हम स्वतंत्रता के लिए संघर्ष करेंगे। – बाल गंगाधर तिलक",
+      "देश के लिए जीना सबसे बड़ी कुर्बानी है। – अज्ञात",
+      "हमारा भारत महान है। – अज्ञात",
+      "जीवन में कर्तव्य सबसे महत्वपूर्ण है। – महात्मा गांधी",
+      "स्वच्छ भारत, सुंदर भारत। – नरेंद्र मोदी"
     ];
 
     function displayGreeting() {
@@ -139,7 +176,6 @@
         const greeting = `<strong>${name}</strong>, Wishing you a very Happy Republic Day 2025! 🇮🇳`;
         message.innerHTML = `
           <div>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Flag" style="width: 100px; height: auto; border-radius: 50%;">
             <p>${greeting}</p>
           </div>`;
         quoteElement.textContent = `"${randomQuote}"`;
