More image add index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      background: #FFFFFF;
       color: #000;
+      background: url('https://media.giphy.com/media/ka5i65sFAlM9pbZ2OM/giphy.gif') no-repeat center center fixed;
+      background-size: cover;
       overflow-x: hidden;
     }
     header {
       padding: 20px;
-      background-color: #FF9933;
+      background-color: rgba(255, 153, 51, 0.8);
       color: white;
     }
     header h1 {
@@ -68,18 +69,26 @@
       color: #FF9933;
       margin-top: 10px;
     }
-    .flag-container img {
-      width: 100px;
-      height: auto;
-      margin-top: 10px;
-      border-radius: 10px;
-    }
-    .share-buttons {
+    .gif-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
       margin-top: 20px;
     }
-    .share-buttons button {
-      background-color: #ff9933;
-      margin: 5px;
+    .gif-container img {
+      width: 150px;
+      height: auto;
+      border-radius: 10px;
+      animation: bounce 2s infinite;
+    }
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
     }
     footer {
       margin-top: 20px;
@@ -87,32 +96,13 @@
       background-color: #138808;
       color: white;
     }
-
-    /* Fireworks animation */
-    .fireworks {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      height: 100%;
-      background: url('https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif') no-repeat center center;
-      background-size: cover;
-      opacity: 0.5;
-      z-index: -1;
-    }
   </style>
 </head>
 <body>
   <header>
     <h1>Happy Republic Day 2025!</h1>
   </header>
-  <div class="fireworks"></div>
   <div class="content">
-    <!-- Flag always visible -->
-    <div class="flag-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Flag_of_India.svg" alt="Indian Flag">
-    </div>
     <h1>Vande Mataram!</h1>
     <h2>Enter your name to get a personalized greeting</h2>
     <div class="input-container">
@@ -126,12 +116,20 @@
       <button onclick="shareFacebook()">Share on Facebook</button>
       <button onclick="shareTwitter()">Share on Twitter</button>
     </div>
+
+    <!-- GIF Section -->
+    <div class="gif-container">
+      <img src="https://media.giphy.com/media/PBTspW4y2VxIe9PfUR/giphy.gif" alt="GIF 1">
+      <img src="https://media.giphy.com/media/8rMcorZSnKCFqNDHbU/giphy.gif" alt="GIF 2">
+      <img src="https://media.giphy.com/media/pDLsJZaKlye2FYiVfA/giphy.gif" alt="GIF 3">
+      <img src="https://media.giphy.com/media/gLKwG0wnLe5zXdTnbp/giphy.gif" alt="GIF 4">
+    </div>
   </div>
   <footer>
     <p>🇮🇳 Jai Hind! Proud to be Indian 🇮🇳</p>
   </footer>
   <script>
-    // Array of Patriotic Quotes from Indian Leaders
+    // Array of Patriotic Quotes
     const quotes = [
       "स्वतंत्रता हमारा जन्मसिद्ध अधिकार है। – बाल गंगाधर तिलक",
       "करो या मरो। – महात्मा गांधी",
@@ -142,26 +140,7 @@
       "सभी महान कार्य शक्ति और विश्वास से होते हैं। – सरदार वल्लभभाई पटेल",
       "जब तक गलती करने की स्वतंत्रता ना हो, तब तक स्वतंत्रता का कोई अर्थ नहीं है। – महात्मा गांधी",
       "सपने वो नहीं जो हम सोते वक्त देखते हैं, बल्कि सपने वो हैं जो हमें सोने नहीं देते। – डॉ. एपीजे अब्दुल कलाम",
-      "मेरे पास जीवन में केवल एक लक्ष्य है – भारत को महान बनाना। – नरेंद्र मोदी",
-      "शांति से देश की सेवा करें। – जवाहरलाल नेहरू",
-      "साहस के बिना आप कुछ नहीं कर सकते। – इंदिरा गांधी",
-      "देश को स्वच्छ बनाएं, यह हमारा कर्तव्य है। – नरेंद्र मोदी",
-      "हम एक हैं। – सरदार वल्लभभाई पटेल",
-      "हमारा कर्तव्य है कि भारत को बेहतर बनाए। – डॉ. राजेंद्र प्रसाद",
-      "कभी भी हार मत मानो। – रानी लक्ष्मीबाई",
-      "वंदे मातरम्। – बंकिम चंद्र चटर्जी",
-      "देशभक्ति सबसे बड़ा धर्म है। – भगत सिंह",
-      "अहिंसा परमो धर्मः। – महात्मा गांधी",
-      "देश की सेवा सबसे बड़ा धर्म है। – महात्मा गांधी",
-      "तिरंगे की शान हमेशा बनाए रखेंगे। – अज्ञात",
-      "भारत एक महान देश है। – जवाहरलाल नेहरू",
-      "देशभक्ति से बड़ा कुछ नहीं। – भगत सिंह",
-      "आजादी का स्वाद केवल वही जानते हैं जो इसके लिए लड़ते हैं। – सुभाष चंद्र बोस",
-      "हम स्वतंत्रता के लिए संघर्ष करेंगे। – बाल गंगाधर तिलक",
-      "देश के लिए जीना सबसे बड़ी कुर्बानी है। – अज्ञात",
-      "हमारा भारत महान है। – अज्ञात",
-      "जीवन में कर्तव्य सबसे महत्वपूर्ण है। – महात्मा गांधी",
-      "स्वच्छ भारत, सुंदर भारत। – नरेंद्र मोदी"
+      "मेरे पास जीवन में केवल एक लक्ष्य है – भारत को महान बनाना। – नरेंद्र मोदी"
     ];
 
     function displayGreeting() {
